WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36506
[chromium] XMLHttpRequest.send sends 'undefined' string when passed undefined value.
https://bugs.webkit.org/show_bug.cgi?id=36506
Summary
[chromium] XMLHttpRequest.send sends 'undefined' string when passed undefined...
David Levin
Reported
2010-03-23 14:24:21 PDT
From
http://crbug.com/33062
: Given the following JavaScript: var x = new XMLHttpRequest(); x.open('POST', '/'); x.send(undefined); Expected result is: POST request with empty request body. Instead chromium sends "undefined" as the request body.
Attachments
Proposed fix.
(4.88 KB, patch)
2010-03-23 14:46 PDT
,
David Levin
japhet
: review+
levin
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Levin
Comment 1
2010-03-23 14:46:31 PDT
Created
attachment 51454
[details]
Proposed fix.
Nate Chapin
Comment 2
2010-03-23 14:51:53 PDT
Comment on
attachment 51454
[details]
Proposed fix. r=me
David Levin
Comment 3
2010-03-23 15:28:39 PDT
Committed as
http://trac.webkit.org/changeset/56422
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug