[chromium] XMLHttpRequest.send sends 'undefined' string when passed undefined value. https://bugs.webkit.org/show_bug.cgi?id=36506

Reviewed by Nate Chapin.

WebCore:

Test: http/tests/xmlhttprequest/send-undefined-and-null.html

* bindings/v8/custom/V8XMLHttpRequestCustom.cpp:
(WebCore::isDocumentType): Unrelated style fix: fixed the casing of the method.
(WebCore::V8XMLHttpRequest::sendCallback): Added check for null/undefined to do the send.
This mirrors what is done in the JSC bindings. Previously, sending 'null' worked because
the last case, which did "toWebCoreStringWithNullCheck", resulted in sending an empty
request body.

LayoutTests:

Added a test to verify that sending either undefined and null both result in an empty request body.

* http/tests/xmlhttprequest/send-undefined-and-null-expected.txt: Added.
* http/tests/xmlhttprequest/send-undefined-and-null.html: Added.

Canonical link: https://commits.webkit.org/47716@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56422 268f45cc-cd09-0410-ab3c-d52691b4dbfc